# Moagent

./: .gitignore  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP_SUMMARY.md  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-test.txt  requirements-web.txt  requirements.txt  setup.py
docs/: AGENTS_ARCHITECTURE.md  CRAWLER_GUIDE.md  PARSER_GUIDE.md  PROJECT_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_REPORT.md  reports.tex
moagent/: __init__.py  __main__.py  async_processor.py  cli.py  main.py  rate_limiter.py  retry.py
moagent/agents/: __init__.py  coordinator.py  rag_coordinator.py
moagent/agents/multi_agent/: __init__.py  base.py  communication.py  message.py
moagent/agents/multi_agent/agents/: __init__.py  analyst.py  explorer.py  optimizer.py  supervisor.py  validator.py
moagent/agents/multi_agent/workflow/: __init__.py  adaptive.py  graph.py
moagent/agents/pattern_generator/: __init__.py  basic_list_pattern_generator.py  html_downloader.py  llm_pattern_comparator.py  llm_pattern_generator.py  llm_pattern_refiner.py
moagent/cache/: __init__.py
moagent/config/: __init__.py  constants.py  settings.py
moagent/crawlers/: __init__.py  base.py
moagent/crawlers/base/: __init__.py  crawler.py  extractor.py
moagent/crawlers/content/: __init__.py  base.py  dynamic.py  html.py  llm.py  patterns.py
moagent/crawlers/list/: __init__.py  base.py  dynamic.py  html.py  llm.py  patterns.py  rss.py
moagent/llm/: __init__.py  client.py  ops_parsing.py  ops_pattern.py  templating.py
moagent/monitoring/: __init__.py
moagent/notify/: __init__.py  simple.py
moagent/parsers/: __init__.py  base.py  config_loader.py  generic.py  llm.py  llm_ops.py  rules.py  schema.py
moagent/plugins/: __init__.py
moagent/rag/: __init__.py  embeddings.py  knowledge_base.py  rag_crawler.py  retriever.py  vector_store.py
moagent/storage/: __init__.py  base.py  sqlite.py
moagent/utils/: __init__.py  helpers.py
scripts/: verify_install.py
tests/: __init__.py  check_rag_status.py  debug_llm_403.py  debug_rag_init.py  quick_rag_check.py  test_anthropic_support.py  test_api_Health.py  test_async_processor.py  test_batch_operations.py  test_cache.py  test_config_validation.py  test_coordinator_langgraph.py  test_crawler_node_config.py  test_factory_patterns.py  test_pattern_api_integration.py  test_provider_key_fix.py  test_rag.py  test_rag_basic.py  test_rag_simple.py  test_rate_limiter.py  test_retry.py  test_storage_backends.py  test_yaml_save.py
tests/test_multi_agent/: test_base_agent.py  test_communication.py
tests/test_multi_agent/test_agents/: test_supervisor_integration.py
tests/test_multi_agent/test_workflow/: test_langgraph.py
web_app/: README.md  START_HERE.md  app.py  requirements.txt  run.sh  test_web_app.py
web_app/static/css/: style.css
web_app/static/js/: config.js  crawl.js  dashboard.js  index.js  multi-agent.js  rag.js  storage.js
web_app/templates/: config.html  crawl.html  dashboard.html  index.html  multi_agent.html  rag.html  storage.html
